# s3fcp

./: .gitignore  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: ci.yml  release.yml
src/: chunk.rs  cli.rs  downloader.rs  error.rs  http_client.rs  lib.rs  main.rs  progress.rs  s3_client.rs  stage1_queue.rs  stage2_download.rs  stage3_output.rs  uri.rs
tests/: http_integration_test.rs  integration_test.rs
