[package]
name = "s3fcp"
version = "0.1.4"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.55"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Channels
flume = "0.11"

# Retry logic
backon = "1.6.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress
indicatif = "0.17"

# Utilities
bytes = "1.7"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["stream"] }
async-trait = "0.1"

[dev-dependencies]
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["localstack"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tempfile = "3"
